[tool.poetry]
name = "sphinx-click-111"
version = "0.1.0"
description = ""
authors = ["morcef <morcef_87@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0"
typer = "^0.6"

[tool.poetry.dev-dependencies]
sphinx = "^5.0"
sphinx-autodoc-typehints = "^1.12"
sphinx-click = "^3.1"
sphinx-rtd-dark-mode = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
